welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: not found: value ==
      case day == 1 => return "10:00"
               ^alarmClock:5: error: not found: value ==
      case day == 2 => return "10:00"
               ^alarmClock:6: error: not found: value ==
      case day == 3 => return "10:00"
               ^alarmClock:7: error: not found: value ==
      case day == 4 => return "10:00"
               ^alarmClock:8: error: not found: value ==
      case day == 5 => return "10:00"
               ^alarmClock:9: error: not found: value ==
      case day == 6 => return "off"
               ^alarmClock:10: error: not found: value ==
      case day == 0 => return "off"
               ^alarmClock:13: error: not found: value ==
      case day == 1 => return "7:00"
               ^alarmClock:14: error: not found: value ==
      case day == 2 => return "7:00"
               ^alarmClock:15: error: not found: value ==
      case day == 3 => return "7:00"
               ^alarmClock:16: error: not found: value ==
      case day == 4 => return "7:00"
               ^alarmClock:17: error: not found: value ==
      case day == 5 => return "7:00"
               ^alarmClock:18: error: not found: value ==
      case day == 6 => return "10:00"
               ^alarmClock:19: error: not found: value ==
      case day == 0 => return "10:00"
               ^